--- a/WorkSmart.Repository/appsettings.json
+++ b/WorkSmart.Repository/appsettings.json
@@ -8,6 +8,6 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HL2R6TD;Initial Catalog=WorkSmart;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=TThanh;Initial Catalog=WorkSmart;Integrated Security=True;Trust Server Certificate=True"
   }
 }
