add cloudinary service

--- a/WorkSmart.API/appsettings.json
+++ b/WorkSmart.API/appsettings.json
@@ -20,5 +20,10 @@
     "Host": "smtp.gmail.com",
     "Port": 587
   },
+  "Cloudinary": {
+    "CloudName": "duizep4kz",
+    "ApiKey": "571114813346486",
+    "ApiSecret": "R2IvQJ5bGO2XSH1HdPPXxf3yqN8"
+  },
   "AllowedHosts": "*"
 }
