--- a/WorkSmart.Application/WorkSmart.Application.csproj
+++ b/WorkSmart.Application/WorkSmart.Application.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.4" />
     <PackageReference Include="MailKit" Version="4.9.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="MimeKit" Version="4.9.0" />
   </ItemGroup>
 
