--- a/WorkSmart.Repository/appsettings.json
+++ b/WorkSmart.Repository/appsettings.json
@@ -8,5 +8,6 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
+    "DefaultConnection": "Data Source=HanNii-Laptop\\MSSQLSERVER01;User Id=sa;Password=123456;Initial Catalog=WorkSmart;Integrated Security=True;Trust Server Certificate=True"
   }
 }
