--- a/WorkSmart.Repository/appsettings.json
+++ b/WorkSmart.Repository/appsettings.json
@@ -8,7 +8,7 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HL2R6TD;Initial Catalog=WorkSmart;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=HanNii-Laptop\\MSSQLSERVER01;Initial Catalog=WorkSmart;User Id=sa;Password =123456;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
 
   }
 }
