--- a/WorkSmart.Application/WorkSmart.Application.csproj
+++ b/WorkSmart.Application/WorkSmart.Application.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="MailKit" Version="4.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
     <PackageReference Include="MimeKit" Version="4.9.0" />
   </ItemGroup>
 
