--- a/WorkSmart.API/jobLimitSettings.json
+++ b/WorkSmart.API/jobLimitSettings.json
@@ -1,4 +1,5 @@
 {
   "MaxJobsPerDay": 1,
-  "UpdatedAt": "31/03/2025 6:13:53 CH"
+  "UpdatedAt": "4/2/2025 9:41:35 PM",
+  "DefaultFeaturedJob": 0
 }
