--- a/WorkSmart.Repository/appsettings.json
+++ b/WorkSmart.Repository/appsettings.json
@@ -8,6 +8,6 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-HL2R6TD;Initial Catalog=WorkSmart;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=PC-AWNSOME\\HUYDEV;Database=WorkSmart;User Id=sa;Password=1234567890;TrustServerCertificate=true;Trusted_Connection=SSPI;Encrypt=false;"
   }
 }
