--- a/WorkSmart.API/appsettings.json
+++ b/WorkSmart.API/appsettings.json
@@ -33,5 +33,8 @@
   "PaymentUrls": {
     "BaseUrl": "http://your-domain.com" //update domain later
   },
+  "Cohere": {
+    "Key": "wtAneuM2TV3rQ1FOEGHqhbCZI0Y1qoH8N5QuQ8iT"
+  },
   "AllowedHosts": "*"
 }
